--- a/package.json
+++ b/package.json
@@ -6,6 +6,7 @@
   "author": "andela-fomokaro <faith.omokaro@andela.com>",
   "license": "MIT",
   "dependencies": {
+    "cookie-session": "^2.0.0-beta.3",
     "dotenv": "^6.2.0",
     "ejs": "^2.6.1",
     "express": "^4.16.4",
