--- a/package.json
+++ b/package.json
@@ -5,6 +5,8 @@
   "repository": "git@github.com:omokaro-faith/Google-Oauth.git",
   "author": "andela-fomokaro <faith.omokaro@andela.com>",
   "license": "MIT",
+  "start": "node app.js",
+  "heroku-postbuild": "nodemon app.js",
   "dependencies": {
     "cookie-session": "^2.0.0-beta.3",
     "dotenv": "^6.2.0",
