--- a/package.json
+++ b/package.json
@@ -1,13 +1,16 @@
 {
-  "name": "Google-Oauth",
+  "name": "google-oauth",
   "version": "1.0.0",
   "main": "app.js",
-  "repository": "git@github.com:omokaro-faith/Google-Oauth.git",
+  "repository": {
+    "type": "git",
+    "url": "git+ssh://git@github.com/omokaro-faith/Google-Oauth.git"
+  },
   "author": "andela-fomokaro <faith.omokaro@andela.com>",
   "license": "MIT",
   "scripts": {
     "start": "node app.js",
-    "heroku-postbuild": "nodemon app.js"
+    "heroku-postbuild": "node app.js"
   },
   "dependencies": {
     "cookie-session": "^2.0.0-beta.3",
@@ -18,5 +21,11 @@
     "nodemon": "^1.18.9",
     "passport": "^0.4.0",
     "passport-google-oauth20": "^1.0.0"
-  }
+  },
+  "bugs": {
+    "url": "https://github.com/omokaro-faith/Google-Oauth/issues"
+  },
+  "homepage": "https://github.com/omokaro-faith/Google-Oauth#readme",
+  "devDependencies": {},
+  "description": ""
 }
